fix for station scene img, unclickable door bug, jen z-index issue

--- a/app/styles/walk-area.css
+++ b/app/styles/walk-area.css
@@ -15,11 +15,10 @@
 .walkable-area.stationscene {
   position: relative;
   width: 1200px;
-  height: 277px;
-  top: -100rem;
+  height: 130px;
+  top: -90.5rem;
   left: 2rem;
-  -webkit-clip-path: polygon(5% 40%, 10% 0, 22% 0, 22% 52%, 86% 52%, 96% 52%, 97% 64%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0 81%);
-  clip-path: polygon(5% 40%, 10% 0, 22% 0, 22% 52%, 86% 52%, 96% 52%, 97% 64%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0 81%);
+  
   z-index: 4;
 }
 
